--- a/Average-Quantum-Channel-Fidelity-Estimation-Simulation.ipynb
+++ b/Average-Quantum-Channel-Fidelity-Estimation-Simulation.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "#### Code by Nicolas Perez\n",
     "\n",
-    "#### Freely reproduce and/or modify this code for any purpose, so long as: credit to Nicolas Perez is given, a reference to the \"A Framework for Authenticity, Integrity and Replay Protection in QuantumData Communication\" paper is made explicit, and credit is given to all of the authors of the paper. \n",
+    "#### MIT license. Much appreciated if: credit is given to Nicolas Perez, a reference to the \"A Framework for Authenticity, Integrity and Replay Protection in QuantumData Communication\" paper is made explicit, and credit is given to all of the authors of the paper. \n",
     "\n",
     "### The code in this notebook is for the replay detection simulation in the \"A Framework for Authenticity, Integrity and Replay Protection in QuantumData Communication\" paper."
    ]
